# psysafe-ai

./: .gitignore  .pre-commit-config.yaml  README.md  TERMS_OF_SERVICE.md  custom_config.yaml  hello.py  pyproject.toml  specification.md  suicide_prevention_example_spec.md  test_ai_harm_detection.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
cleanup_reports/: cleanup_audit_20250530_104541.json  cleanup_audit_20250530_105449.json  cleanup_audit_20250530_152023.json  cleanup_audit_20250530_152322.json  cleanup_audit_20250530_155017.json  cleanup_audit_20250530_171357.json  cleanup_audit_20250530_171725.json  cleanup_report_20250530_104539.html  cleanup_report_20250530_105447.html  cleanup_report_20250530_152022.html  cleanup_report_20250530_152321.html  cleanup_report_20250530_155016.html  cleanup_report_20250530_171355.html  cleanup_report_20250530_171724.html  cleanup_summary_20250530_104539.md  cleanup_summary_20250530_105447.md  cleanup_summary_20250530_152022.md  cleanup_summary_20250530_152321.md  cleanup_summary_20250530_155016.md  cleanup_summary_20250530_171355.md  cleanup_summary_20250530_171724.md
cleanup_system/: README.md  __init__.py  main.py  test_cleanup.py
cleanup_system/config/: __init__.py  cleanup_config.yaml  manager.py  schemas.py
cleanup_system/core/: __init__.py  base.py  pipeline.py  safety.py  validation.py
cleanup_system/modules/: __init__.py  consolidation.py  dead_code.py  dependencies.py  documentation.py  standards.py  testing.py
cleanup_system/reporting/: __init__.py  progress.py  reports.py
docs/: README.md  architecture.md  code_cleanup_specification.md  evaluation.md  getting_started.md  guardrail_catalog.md  index.html  index.md  library_overview.md  refactoring_specification.md
docs/archived_research/: ai_harm_research_README.md  suicide_research_README.md  vulnerability_research_README.md
evaluators/vulnerability/: build_eval.py
examples/: 01_vulnerability.py  02_suicide_prevention.py  03_complaints_handling.py  04_mental_health_support.py  05_pii_protection.py
guardrails/suicide/: suicide.py
guardrails/vulnerability/: run.py  vulnerability.py
prompts/vulnerability/: README.md  run.py  vulnerability.py
psysafe/: __init__.py
psysafe/catalog/: __init__.py  registry.py
psysafe/catalog/ai_harm_detection/: __init__.py  config.py  guardrail.py  prompt.md
psysafe/catalog/base/: __init__.py  llm_guardrail.py  prompt_guardrail.py
psysafe/catalog/complaints_handling/: guardrail.py  prompt.md
psysafe/catalog/mental_health_support/: guardrail.py  prompt.md
psysafe/catalog/pii_protection/: guardrail.py  prompt.md
psysafe/catalog/suicide_prevention/: guardrail.py  prompt.md
psysafe/cli/: __init__.py  guard.py  main.py
psysafe/core/: base.py  check.py  composite.py  config.py  exceptions.py  models.py  prompt.py  template.py  types.py
psysafe/drivers/: anthropic.py  base.py  openai.py  transformers.py
psysafe/evaluation/: __init__.py  metrics.py  models.py  reports.py  runner.py
psysafe/typing/: requests.py  responses.py
psysafe/utils/: llm_parsing.py  llm_utils.py  parsing.py
tests/catalog/: test_ai_harm_detection_guardrail.py  test_catalog_registry.py  test_complaints_guardrail.py  test_mental_health_guardrail.py  test_pii_guardrail.py  test_suicide_guardrail.py  test_vulnerability_guardrail.py
tests/core/: test_config.py  test_exceptions.py  test_guardrail_abstractions.py  test_models.py  test_prompt_template.py  test_types.py
tests/drivers/: test_openai_driver.py
tests/utils/: standalone_formatter_test.py  test_conversation_formatter.py  test_llm_calls.py  test_llm_utils.py  test_parsing.py
utils/: __init__.py  conversation_formatter_docs.md  llm_utils.py  standalone_formatter_test.py  test_conversation_formatter.py
(+3 files in other folders)
